# cli-manager

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  example_runner.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml
cli/: __init__.py  argument.py  command.py  management.py
cli_manager/: command.py
example/scripts/: whats_my_name.py
tests/: test_argument.py  test_management.py
tests/test_commands/: test_command.py
